--- a/Code/Photorespiration-Species.Rmd
+++ b/Code/Photorespiration-Species.Rmd
@@ -10,31 +10,9 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-# Before using any of the code below, make sure that all of the necessary packages are installed using this line. If any packages are missing from the library, please do install them manually using the hashed out line below. 
+# 1. Asign all the variable labels that will be useful for plotting the data.
 
 ```{r}
-install.packages("Hmisc", dependencies = T) 
-
-# install.packages("missingpackage")
-```
-
-
-
-
-#Loading in all the packages and setting up so that all variables are expressed correctly
-
-
-```{r}
-
-packages_to_load <- c("drc", "bbmle", "labelled", "MALDIquant", 
-                      "magicfor", "ggplot2", "ggpubr", "ggpmisc", "tidyverse", "broom", 
-                      "Hmisc", "plotly", "PairedData", "DescTools", 
-                      "generalhoslem", "graphics", "nls2", "plyr",
-                      "ggthemes", "ggpubr", "signal", "segmented")
-
-lapply(packages_to_load, library, character.only = TRUE)
-
-## lable ----
 ytleaf          <- expression("T"["leaf"]~degree~"C")
 photorate       <- expression("" ~mu ~ mol ~ "CO"[2]~m^{-2} ~ "s"^{-1})
 labrsq          <- expression(R^{2}~"=")
@@ -48,13 +26,10 @@ labtrmmol       <- expression("E"~~"in"~mol~H[2]*O~m^{-2}~s^{-1})
 etrrate         <- expression("" ~mu ~ mol ~"photon" ~m^{-2} ~ "s"^{-1})
 photorate       <- expression("" ~mu ~ mol ~ "CO"[2]~m^{-2} ~ "s"^{-1})
 labgs           <- expression(paste(italic(g[s])*" ("~mol[H[2]*O]~m^{-2}~s^{-1}~")"))
-
-
-
 ```
 
 
-#Loading in the compiled species data into a dataframe (df).
+# 2. Loading in the compiled species data into a dataframe (df). If the output file is already created, go directly to entry 5.
 
 ```{r}
 df <- read.csv("Data/Uppsala-2024-Summer-Photorespiration-SpotMes-TreeSpp.csv", header = T, stringsAsFactors = T, sep = ";")
@@ -62,7 +37,7 @@ df <- read.csv("Data/Uppsala-2024-Summer-Photorespiration-SpotMes-TreeSpp.csv", 
 
 
 
-#Cleaning up the dataframe by sorting out any entries in the loaded file that will not be used in the analysis. Thereafter pairing entries together (O2-free with ambient for the same replicate). Then converting all the pairs into factors.
+#3. Clean up of the dataframe by sorting out any entries in the loaded file that will not be used in the analysis. Thereafter pairing entries together (O2-free with ambient for the same replicate). Then converting all the pairs into factors.
 
 ```{r}
 df     <- subset(df, dq == "yes") # eliminates unreliable values.
@@ -83,7 +58,7 @@ setwd("output")
 
 
 
-#Next, running the for loop that will give us our worksheet for the statistical analysis. All variables that we want to calculate and use for later are set here. 
+#4. The for loop that will give us our worksheet for the statistical analysis. All data that we want to calculate and use for later are made here. 
 
 ```{r}
 correct_RD <- function(data, output_path){
@@ -259,7 +234,7 @@ correct_RD(dflist, "./")
 
 
 
-#Loading in the output file of the for loop into the "outs" dataframe. 
+#5. Loading in the output file of the for loop into the "outs" dataframe. 
 
 ```{r}
 
@@ -268,113 +243,356 @@ outs <- read.csv("species-output.csv", stringsAsFactors = T, sep = ";")
 ```
 
 
-# Thereafter, we can make some figures with our compiled data, for instance plotting the absolute rates of photorespiration over the leaf temperature for each species. 
+#6. Before plotting any figures, it these packages need to be loaded in. "dplyr" might need to be loaded in a separate time after all of them have been loaded once to actually work. 
 
 ```{r}
+library(stats)
+library(base)
 library(dplyr)
-s.table <- outs %>%
+library(ggplot2)
+```
+
+
+
+###Figures
+
+
+
+#7. Absolute photorespiration rates across temperature
+```{r}
+svg(filename = "pr-raw.svg", width = 16, height = 4.5, bg = "transparent")
+
+
+absolute.table <- outs %>%
   group_by(sp, setTleaf) %>%
   summarise(pr.real.avg = mean(pr.real),
             se = sd(pr.real))
 
+ggplot(absolute.table, aes(y = pr.real.avg, x=setTleaf, group=sp))+
+  geom_errorbar(aes(ymin=pr.real.avg-se, ymax=pr.real.avg+se),col ="grey70", width= 2.5)+ #pmin can be used to cap the ymax. (e.g., pmin(pr.real.avg+se, 1.0))
+  geom_smooth(data = outs, mapping = aes(y=pr.real, x=setTleaf), se = F, method="lm", col = "grey80")+
+  geom_point(col="grey30", size = 3, pch = 21, fill = "cornflowerblue", stroke = 0.85)+
+  facet_wrap(~sp, ncol = 7) +
+  scale_y_continuous(limits = c(0, 15), name = expression(paste(italic(R)[p], ' (', mu * ~'mol'~ " CO"[2]~' m'^{-2}*' s'^{-1}*')')))+
+  scale_x_continuous(limits = c(20,40), name = "Leaf Temperature (°C)")+
+  ggthemes::theme_base() +
+theme(axis.text.y = element_text(size = 15), 
+      axis.text.x = element_text(size = 15),
+      panel.border = element_rect(color = "grey70"))
+dev.off()
 
-svg(filename = "pr-raw.svg", width = 16, height = 4.5, bg = "transparent")
+```
 
-ggplot(s.table, aes(y = pr.real.avg, x = setTleaf, group=sp))+
-  geom_point(col="black", size = 1.5)+
-  geom_errorbar(aes(ymin=pr.real.avg-se, ymax=pr.real.avg+se), width=.2)+ #pmin can be used to cap the ymax. (e.g., pmin(pr.real.avg+se, 1.0))
-  geom_smooth(data = outs, mapping = aes(y=pr.real, x=setTleaf), se = F, method="lm")+
-  ggpmisc::stat_poly_eq(
-    data = outs,
-    formula = y ~ x,
-    aes(x = setTleaf, y = pr.real, label = paste(after_stat(p.value.label), sep = "")),
-    label.x = 20,
-    label.y = 1.5,
-    digits = 2
-  )+
-  # stat_regline_equation(data = outs, aes(x = setTleaf, y=pr.real, label = paste(..eq.label.., ..adj.rr.label.., paste("p = ", ..p.value..), sep = "~~~")),
+
+
+#8. Absolute photosynthesis across temperature
+
+```{r}
+svg(filename = "anet21-raw.svg", width = 16, height = 4.5, bg = "transparent")
+
+
+anet.table <- outs %>%
+  group_by(sp, setTleaf) %>%
+  summarise(anet.21p.avg = mean(anet.21p),
+            se = sd(anet.21p))
+
+
+ggplot(anet.table, aes(y = anet.21p.avg, x=setTleaf, group=sp))+
+   #pmin can be used to cap the ymax. (e.g., pmin(anet.21p.avg+se, 1.0))
+  geom_smooth(data = outs, mapping = aes(y=anet.21p, x=setTleaf), se = F, method="lm", col = "grey80")+
+  geom_errorbar(aes(ymin=anet.21p.avg-se, ymax=anet.21p.avg+se),col ="grey70", width= 2.5) +
+  geom_point(col="grey30", size = 3, pch = 21, fill = "limegreen", stroke = 0.85)+
+  # stat_regline_equation(data = outs, aes(x = setTleaf, y=anet.21p, label = paste(..eq.label.., ..adj.rr.label.., paste("p = ", ..p.value..), sep = "~~~")),
   # formula = y~x,
   # label.x =22, label.y = 1.5)+
   facet_wrap(~sp, ncol = 7) +
-  scale_y_continuous(limits = c(0, 15), name = "Net CO2 assimilation rate (0% O2) - Net CO2 assimilation rate (21 % O2)")+
+  scale_y_continuous(limits = c(0, 25), name = expression(paste(italic(A)[Net], ' (', mu * ~'mol'~ " CO"[2]~' m'^{-2}*' s'^{-1}*')')))+
   scale_x_continuous(limits = c(20,40), name = "Leaf Temperature (°C)")+
-  ggthemes::theme_base()
+  ggthemes::theme_base()+
+  theme(axis.text.y = element_text(size = 15), 
+        axis.text.x = element_text(size = 15),
+        panel.border = element_rect(color = "grey70"))
+dev.off()
+
+```
+
+
+#9. Percentage of photorespiration across temperature
+
+```{r}
+svg(filename = "pr-percent.svg", width = 16, height = 4.5, bg = "transparent")
+
+
+
+percent.table <- outs %>%
+  group_by(sp, setTleaf) %>%
+  summarise(pr.percent.avg = mean(pr.percent),
+            se = sd(pr.percent))
+
+
+ggplot(percent.table, aes(y = pr.percent.avg, x=setTleaf, group=sp))+
+  #pmin can be used to cap the ymax. (e.g., pmin(pr.real.avg+se, 1.0))
+  geom_smooth(data = outs, mapping = aes(y=pr.percent, x=setTleaf), se = F, method="lm", col = "grey80")+
+  # ggpmisc::stat_poly_eq(
+  #   data = outs,
+  #   formula = y ~ x,
+  #   aes(x = setTleaf, y = pr.percent, label = paste(after_stat(p.value.label), sep = "~~~")),
+  #   label.x = 22,
+  #   label.y = 1.5,
+  # )+
+  geom_errorbar(aes(ymin=pr.percent.avg-se, ymax=pr.percent.avg+se),col ="grey70", width= 2.5)+
+  geom_point(col="grey30", size = 3, pch = 21, fill = "red3", stroke = 0.85)+
+  # stat_regline_equation(data = outs, aes(x = setTleaf, y=pr.real, label = paste(..eq.label.., ..adj.rr.label.., paste("p = ", ..p.value..), sep = "~~~")),
+  # formula = y~x,
+  # label.x =22, label.y = 1.5)+
+  facet_wrap(~sp, ncol = 7)+
+  scale_y_continuous(limits = c(0, 1.5), name = 
+                       expression(paste(italic(R)[p]/italic(A)[Net])))+
+  scale_x_continuous(limits = c(20,40), name = "Leaf Temperature (°C)")+
+  ggthemes::theme_base() +
+  theme(axis.text.y = element_text(size = 15), 
+        axis.text.x = element_text(size = 15),
+        panel.border = element_rect(color = "grey70"))
+dev.off()
+
+```
+
+
+#10. Creating a factorial dataframe of our leaf temperatures used for plotting
+
+```{r}
+outs$tl <- as.factor(outs$setTleaf)
+```
+
+
+#11. Absolute photorespiration and photosynthesis rates across species boxplot (across all temperatures)
+
+```{r}
+svg(filename = "Rp-species.svg", width = 12, height = 6, bg = "transparent")
+
+ggplot(outs, aes(y = pr.real, x=sp)) +
+  geom_boxplot(aes(x = sp, y = pr.real), outliers =  F)  +
+  geom_jitter(aes(size = tl),  color = "grey", alpha = 0) +
+  
+  xlab(" ") +
+  scale_y_continuous(limits = c(0,15), 
+                     name = expression(paste(italic(R)[p], ' (', mu * ~'mol'~ " CO"[2]~' m'^{-2}*' s'^{-1}*')')))+
+  ggthemes::theme_base()+
+  theme(axis.text.y = element_text(size = 15), 
+        axis.text.x = element_text(size = 15),
+        panel.border = element_rect(color = "grey70")) +
+  coord_flip()
+dev.off()
+
+svg(filename = "Anet-species.svg", width = 12, height = 6, bg = "transparent")
+
+ggplot(outs, aes(y = anet.21p, x=sp)) +
+  geom_boxplot(aes(x = sp, y = anet.21p), outliers =  F)  +
+  geom_jitter(aes(size = tl),  color = "grey", alpha = 0) +
+  
+  xlab(" ") +
+  scale_y_continuous(limits = c(0,25), 
+                     name = expression(paste(italic(A)[net], ' (', mu * ~'mol'~ " CO"[2]~' m'^{-2}*' s'^{-1}*')')))+
+  ggthemes::theme_base()+
+  theme(axis.text.y = element_text(size = 15), 
+        axis.text.x = element_text(size = 15),
+        panel.border = element_rect(color = "grey70")) +
+  coord_flip()
+dev.off()
+
+
+
+```
+
+
+#12. Absolute photorespiration and photosynthesis rates across species including the spread of temperature points 
+
+```{r}
+svg(filename = "Rp-species-spotted.svg", width = 12, height = 6, bg = "transparent")
+
+ggplot(outs, aes(y = pr.real, x=sp)) +
+  geom_boxplot(aes(x = sp, y = pr.real), outliers =  F)  +
+  geom_jitter(aes(size = tl), color = as.factor(outs$setTleaf), alpha = 0.5) +
+  xlab(" ") +
+  scale_y_continuous(limits = c(0,15), 
+                     name = expression(paste(italic(R)[p], ' (', mu * ~'mol'~ " CO"[2]~' m'^{-2}*' s'^{-1}*')')))+
+  ggthemes::theme_base()+
+  theme(axis.text.y = element_text(size = 20), 
+        axis.text.x = element_text(size = 20),
+        panel.border = element_rect(color = "grey70")) +
+  coord_flip()
+dev.off()
+
+
+svg(filename = "Anet-species-spotted.svg", width = 12, height = 6, bg = "transparent")
+
+ggplot(outs, aes(y = anet.21p, x=sp)) +
+  geom_boxplot(aes(x = sp, y = anet.21p), outliers =  F)  +
+  geom_jitter(aes(size = tl), color = as.factor(outs$setTleaf), alpha = 0.5) +
+  xlab(" ") +
+  scale_y_continuous(limits = c(0,25), 
+                     name = expression(paste(italic(A)[net], ' (', mu * ~'mol'~ " CO"[2]~' m'^{-2}*' s'^{-1}*')')))+
+  ggthemes::theme_base()+
+  theme(axis.text.y = element_text(size = 20), 
+        axis.text.x = element_text(size = 20),
+        panel.border = element_rect(color = "grey70")) +
+  coord_flip()
 dev.off()
 ```
 
-# Here we are running a for loop testing the relationship between species, setTleaf and the combined effect of them (I.e the temperature response of species), against pr.real (Absolute photorespiration rates ("10")), pr.percent (Proportional photorespiration rates ("11")), anet.21p (Ambient photosynthesis rates ("4")), anet.0p (O2-free photosynthesis rates ("5")) and JO2.percent (proportional oxygenation rates calculated using ETR only ("31)).
+
+
+#13. Correlation between photorespiration and photosynthesis rates
 
 ```{r}
-
-colindeces <- c(10, 11, 4, 5, 31)
-method.slope <- c()
-value.slope <- c()
-species.slope <- c()
-
-names(outs)[colindeces[1]]
-
-for (index in 1:length(colindeces)){
-  
-  
-  independentVariable = outs[,colindeces[index]] 
-  
-  mod1 <- nlme::lme(independentVariable ~  sp , data = outs, 
-                    random = ~1|treeid, 
-                    method = "REML", 
-                    na.action=na.omit) ; anova(mod1)
-  print(paste("This analysis is based on :", names(outs)[colindeces[index]]))
-  print(summary(mod1))
-  
-  mod1 <- nlme::lme(independentVariable ~  setTleaf , data = outs, 
-                    random = ~1|sp, 
-                    method = "REML", 
-                    na.action=na.omit) ; anova(mod1)
-  
-  print(paste("This analysis is based on :", names(outs)[colindeces[index]]))
-  print(summary(mod1))
-  mod1 <- nlme::lme(independentVariable ~  sp * setTleaf, 
-                    data = outs, 
-                    random = ~1|treeid, 
-                    method = "REML", 
-                    na.action=na.omit) ; anova(mod1)
-  
-  print(paste("This analysis is based on :", names(outs)[colindeces[index]]))
-  print(summary(mod1))
-  
-  
-  print("----------------------------------------------------------------")
-}
+svg(filename = "Rp-over-Anet.svg", width = 7, height = 4.5, bg = "transparent")
 
 
-library(tidyr)
-
-long_data <- outs %>%
-  gather(key = "method", value = "y", pr.percent, JO2.percent)
-
-# Fit a model with an interaction term between method and setTleaf
-long_model <- lm(y ~ sp * setTleaf * method, data = long_data)
-
-# Check the model summary
-summary(long_model)
-
-
-# Fit the model with and without the interaction term between method and setTleaf
-model_interaction <- lm(y ~ sp * setTleaf * method, data = long_data)
-model_no_interaction <- lm(y ~ sp * setTleaf + method, data = long_data)
-
-# Compare the models using a likelihood ratio test
-anova(model_no_interaction, model_interaction)
-
-# Visualize the comparison
-library(ggplot2)
-ggplot(long_data, aes(x = setTleaf, y = y, color = method)) +
-  geom_point() +
-  geom_smooth(method = "lm", se = FALSE) +  # Add linear regression lines
-  facet_wrap(~sp)+
-  labs(title = "Comparison of Slopes for y1 and y2") +
-  theme_minimal()
+ggplot(outs, aes(y = pr.real, x=anet.21p)) +
+  geom_point(size = 3, 
+             stroke = 0.85, aes(color = sp, shape = sp)) +
+  geom_smooth(se = T, method="lm", col = "grey50") +
+  scale_x_continuous(limits = c(0, 25), 
+                     name = expression(paste(italic(A)[Net], ' (', mu * ~'mol'~ " CO"[2]~' m'^{-2}*' s'^{-1}*')'))) +
+  scale_y_continuous(limits = c(0,25), 
+                     name = expression(paste(italic(R)[p], ' (', mu * ~'mol'~ " CO"[2]~' m'^{-2}*' s'^{-1}*')')))+
+  ggthemes::theme_base()+
+  theme(axis.text.y = element_text(size = 15), 
+        axis.text.x = element_text(size = 15),
+        panel.border = element_rect(color = "grey70")) +
+  scale_shape_manual(values = c(21,22,23,24,25,1,2)) +
+  geom_abline(slope = 1, linetype = "dashed", color = "grey50")
+dev.off()
 
 ```
+
+#14. Correlation between photorespiration and photosynthesis rates for each leaf temperature point
+
+```{r}
+svg(filename = "Rp-over-Anet-alltemp.svg", width = 16, height = 4.5, bg = "transparent")
+
+
+ggplot(outs, aes(y = pr.real, x=anet.21p, color = sp)) +
+  geom_smooth(data = outs, mapping = aes(y=pr.real, x=anet.21p), 
+              se = T, method="lm", col = "grey80") +
+  geom_point(size = 3, 
+             stroke = 0.85, aes(color = sp, shape = sp)) +
+  scale_x_continuous(limits = c(0, 25), 
+                     name = expression(paste(italic(A)[Net], ' (', mu * ~'mol'~ " CO"[2]~' m'^{-2}*' s'^{-1}*')'))) +
+  scale_y_continuous(limits = c(0,25), 
+                     name = expression(paste(italic(R)[p], ' (', mu * ~'mol'~ " CO"[2]~' m'^{-2}*' s'^{-1}*')')))+
+  ggthemes::theme_base()+
+  theme(axis.text.y = element_text(size = 15), 
+        axis.text.x = element_text(size = 15),
+        panel.border = element_rect(color = "grey70")) +
+  scale_shape_manual(values = c(21,22,23,24,25,1,2))+
+  geom_abline(slope = 1, linetype = "dashed", color = "grey50") +
+  facet_wrap(~setTleaf)
+dev.off()
+```
+
+
+
+### Statistical tests
+
+
+
+#15. testing absolute photorespiration rates correlation to: Rp1: species, Rp2: temperature and Rp3: species * temperature interaction. 
+```{r}
+Rp1 <- nlme::lme(pr.real ~  sp, data = outs, 
+                  random = ~1|treeid, 
+                  method = "REML", 
+                  na.action=na.omit) ; anova(Rp1)
+
+Rp2 <- nlme::lme(pr.real ~  setTleaf, data = outs, 
+                  random = ~1|sp, 
+                  method = "REML", 
+                  na.action=na.omit) ; anova(Rp2)
+
+Rp3 <- nlme::lme(pr.real ~  sp * setTleaf, data = outs, 
+                  random = ~1|treeid, 
+                  method = "REML", 
+                  na.action=na.omit) ; anova(Rp3)
+```
+
+#16. testing absolute photosynthesis rates correlation to: Anet1: species, Anet2: temperature and Anet3: species * temperature interaction. 
+
+```{r}
+Anet1 <- nlme::lme(anet.21p ~  sp, data = outs, 
+                  random = ~1|treeid, 
+                  method = "REML", 
+                  na.action=na.omit) ; anova(Anet1)
+
+Anet2 <- nlme::lme(anet.21p ~  setTleaf, data = outs, 
+                  random = ~1|sp, 
+                  method = "REML", 
+                  na.action=na.omit) ; anova(Anet2)
+
+Anet3 <- nlme::lme(anet.21p ~  sp * setTleaf, data = outs, 
+                  random = ~1|treeid, 
+                  method = "REML", 
+                  na.action=na.omit) ; anova(Anet3)
+```
+
+#17. testing percentage photorespiration rates correlation to: PR1: species, PR2: temperature and PR3: species * temperature interaction. 
+
+```{r}
+PR1 <- nlme::lme(pr.percent ~  sp, data = outs, 
+                  random = ~1|treeid, 
+                  method = "REML", 
+                  na.action=na.omit) ; anova(PR1)
+
+PR2 <- nlme::lme(pr.percent ~  setTleaf, data = outs, 
+                  random = ~1|sp, 
+                  method = "REML", 
+                  na.action=na.omit) ; anova(PR2)
+
+
+PR3 <- nlme::lme(pr.percent ~  sp * setTleaf, data = outs, 
+                  random = ~1|treeid, 
+                  method = "REML", 
+                  na.action=na.omit) ; anova(PR3)
+
+```
+
+
+#18. Creating dataframes for each temperature
+```{r}
+outs25 <- subset(outs, setTleaf == 25)
+outs30 <- subset(outs, setTleaf == 30)
+outs35 <- subset(outs, setTleaf == 35)
+```
+
+#19. Relation between photorespiration and photosynthesis for all and split each temperature point
+
+```{r}
+Rp-Anet <- nlme::lme(pr.real ~  anet.21p, data = outs, 
+                 random = ~1|sp, 
+                 method = "REML", 
+                 na.action=na.omit) ; anova(Rp-Anet)
+
+
+Rp-Anet25 <- nlme::lme(pr.real ~  anet.21p, data = outs25, 
+                  random = ~1|sp, 
+                  method = "REML", 
+                  na.action=na.omit) ; anova(Rp-Anet25)
+
+Rp-Anet30 <- nlme::lme(pr.real ~  anet.21p, data = outs30, 
+                  random = ~1|sp, 
+                  method = "REML", 
+                  na.action=na.omit) ; anova(Rp-Anet30)
+
+Rp-Anet <- nlme::lme(pr.real ~  anet.21p, data = outs35, 
+                  random = ~1|sp, 
+                  method = "REML", 
+                  na.action=na.omit) ; anova(Rp-Anet35)
+```
+
+
+
+
+
+### WIP
 
 
 
